# rust-http-server

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
public/: 404.html  index.html
src/: main.rs  thread_pool.rs
